Index page now has CSS specified, 1 link

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
+<style>
+.monaco-large {
+    text-align: center;
+    font-family: monaco, monospace;
+    font-size: 28px;
+}
+div {
+  padding-top: 100px;
+}
+</style>
 
 <html>
     <head>
         <title>Colmanator</title>
-    </head>>
+    </head>
+
+    <body>
+        <div>
+            <a href="https://colmanator.github.io/index.htm", class="monaco-large", >index</a>
+        </div> 
+    </body>
 </html>
