Added more links, minor formatting bits.

--- a/index.htm
+++ b/index.htm
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <style>
 .monaco-large {
-    text-align: center;
     font-family: monaco, monospace;
     font-size: 28px;
 }
 div {
   padding-top: 100px;
+  padding-left: 100px;
 }
 </style>
 
 <html>
     <head>
-        <title>Colmanator</title>
+        <title>index</title>
     </head>
 
     <body>
         <div>
-            <a href="https://colmanator.github.io/index.htm", class="monaco-large", >index</a>
+            <a href="https://colmanator.github.io/index.htm", class="monaco-large", >index</a><br>
+            <a href="https://colmanator.github.io/home.htm", class="monaco-large", >home</a><br>
+            <a href="https://colmanator.github.io/projects.htm", class="monaco-large", >projects</a><br>
+            <a href="https://colmanator.github.io/hobby.htm", class="monaco-large", >hobby projects</a><br>
         </div> 
     </body>
 </html>
