Index now uses proportional spacing as opposed to absolute size.

--- a/index.htm
+++ b/index.htm
@@ -2,11 +2,11 @@
 <style>
 .monaco-large {
     font-family: monaco, monospace;
-    font-size: 28px;
+    font-size: 1.75em;
 }
 div {
-  padding-top: 100px;
-  padding-left: 100px;
+  padding-top: 5em;
+  padding-left: 6em;
 }
 </style>
 
