Various changes;     Added nav menu     Recolored a couple of elements     Fixed horrendous margins

--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <style>
-.monaco-large {
-    font-family: monaco, monospace;
-    font-size: 1.75em;
-}
-div {
-  padding-top: 5em;
-  padding-left: 6em;
-}
+    .monaco-large {
+        font-family: monaco, monospace;
+        font-size: 1.75em;
+    }
+
+    * {
+        background: rgb(245, 228, 213);
+    }
+
+    div {
+    padding-top: 5em;
+    padding-left: 6em;
+    }
 </style>
 
 <html>
