Fixed some padding issues Removed the LEGENDARY NEGATIVE MARGIN as it fucked up the flexboxes

--- a/home.htm
+++ b/home.htm
@@ -8,15 +8,17 @@
             .cream {
                 background: rgb(245, 228, 213);
                 color: rgb(10, 10, 10);
-                margin-left: -1em;
-                margin-right: -1em;
+                margin-left: -0em;                     
+                margin-right: -0em;
                 }
             
+                /* Margins set to 0 as they would break flexboxes. */
+
             .black {
                 background: rgb(10, 10, 10);
                 color: rgb(245, 228, 213);
-                margin-left: -1em;
-                margin-right: -1em;
+                margin-left: -0em;
+                margin-right: -0em;
                 }
                 
             .title {
@@ -30,11 +32,13 @@
             .head {
                 font-family: monaco, monospace;
                 font-size: 1.75em;
+                padding-left: 0.5em;
                 }
 
             p {
                 font-family: monaco, monospace;
                 font-size: 1em;
+                padding: 1em;
                 }
 
             a {
