Added title for index.htm

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,10 @@
     padding-top: 5em;
     padding-left: 6em;
     }
+
+    h1 {
+        text-align: center;
+    }
 </style>
 
 <html>
@@ -21,6 +25,7 @@
     </head>
 
     <body>
+        <h1 class="monaco-large">welcome</h1>
         <div>
             <a href="https://colmanator.github.io/index.htm", class="monaco-large", >index</a><br>
             <a href="https://colmanator.github.io/home.htm", class="monaco-large", >home</a><br>
