Separated <style> into a CSS stylesheet for index.htm

--- a/index.htm
+++ b/index.htm
@@ -1,36 +1,17 @@
 <!DOCTYPE html>
-<style>
-    .monaco-large {
-        font-family: monaco, monospace;
-        font-size: 1.75em;
-    }
-
-    * {
-        background: rgb(245, 228, 213);
-    }
-
-    div {
-    padding-top: 5em;
-    padding-left: 6em;
-    }
-
-    h1 {
-        text-align: center;
-    }
-</style>
-
 <html>
     <head>
+        <link rel="stylesheet" href="indexStyle.css">
         <title>index</title>
     </head>
 
     <body>
         <h1 class="monaco-large">welcome</h1>
         <div>
-            <a href="https://colmanator.github.io/index.htm", class="monaco-large", >index</a><br>
-            <a href="https://colmanator.github.io/home.htm", class="monaco-large", >home</a><br>
-            <a href="https://colmanator.github.io/projects.htm", class="monaco-large", >projects</a><br>
-            <a href="https://colmanator.github.io/hobby.htm", class="monaco-large", >hobby projects</a><br>
+            <a href="https://colmanator.github.io/index.htm", class="monaco-large", > >> index</a><br>
+            <a href="https://colmanator.github.io/home.htm", class="monaco-large", > >> home</a><br>
+            <a href="https://colmanator.github.io/projects.htm", class="monaco-large", > >> projects</a><br>
+            <a href="https://colmanator.github.io/hobby.htm", class="monaco-large", > >> hobby projects</a><br>
         </div> 
     </body>
 </html>
