--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
             <a href="https://colmanator.github.io/home.htm", class="monaco-large", > >> home</a><br>
             <a href="https://colmanator.github.io/projects.htm", class="monaco-large", > >> projects</a><br>
             <a href="https://colmanator.github.io/hobby.htm", class="monaco-large", > >> hobby projects</a><br>
+            <a href="https://colmanator.github.io/food.htm", class="monaco-large", > >> food blog</a><br>
         </div> 
     </body>
 </html>
