--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,13 @@
     </head>
 
     <body>
-        <h1 class="monaco-large">welcome</h1>
+        <h1 class="monaco">welcome</h1>
         <div>
-            <a href="https://colmanator.github.io/index.htm", class="monaco-large", > >> index</a><br>
-            <a href="https://colmanator.github.io/home.htm", class="monaco-large", > >> home</a><br>
-            <a href="https://colmanator.github.io/projects.htm", class="monaco-large", > >> projects</a><br>
-            <a href="https://colmanator.github.io/hobby.htm", class="monaco-large", > >> hobby projects</a><br>
-            <a href="https://colmanator.github.io/food.htm", class="monaco-large", > >> food blog</a><br>
+            <a href="https://colmanator.github.io/index.htm", class="monaco", > >> index</a><br>
+            <a href="https://colmanator.github.io/home.htm", class="monaco", > >> home</a><br>
+            <a href="https://colmanator.github.io/projects.htm", class="monaco", > >> projects</a><br>
+            <a href="https://colmanator.github.io/hobby.htm", class="monaco", > >> hobby projects</a><br>
+            <a href="https://colmanator.github.io/food.htm", class="monaco", > >> food blog</a><br>
         </div> 
     </body>
 </html>
