Moved home.htm's style to a stylesheet

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
         <div>
             <a href="https://colmanator.github.io/index.htm", class="monaco", > >> index</a><br>
             <a href="https://colmanator.github.io/home.htm", class="monaco", > >> home</a><br>
-            <a href="https://colmanator.github.io/projects.htm", class="monaco", > >> projects</a><br>
+            <a href="https://colmanator.github.io/projects.htm", class="monaco", > >> software projects</a><br>
             <a href="https://colmanator.github.io/hobby.htm", class="monaco", > >> hobby projects</a><br>
             <a href="https://colmanator.github.io/food.htm", class="monaco", > >> food blog</a><br>
         </div> 
