Various changes, NO MORE FUCKED MARGINS

--- a/home.htm
+++ b/home.htm
@@ -6,16 +6,16 @@
     </head>
 
     <body>
-        <header class="black", style = "margin-top: -1.5em;">
+        <header class="black">
             <h1 class="title black">my thinly veiled vanity project</h1>
         </header>
 
-        <nav class="flex cream", style = "margin-top: -1em;">
+        <nav class="flex cream">
             <a href="https://colmanator.github.io/index.htm">Site Index</a>
             <a href="https://colmanator.github.io/home.htm">Home</a>
             <a href="https://colmanator.github.io/projects.htm">Tech Projects</a>
             <a href="https://colmanator.github.io/hobby.htm">Hobby Stuff</a>
-            <a href="https://colmanator.github.io/contact.htm">Contact/Social</a>
+            <a href="https://colmanator.github.io/food.htm">Food Blog</a>
         </nav>
 
         <main>
@@ -27,7 +27,7 @@
                 </div>
                 <img src="mountainedit.jpg", width="650em">
             </section>
-
+           
             <section class="flex cream">
                 <img src="mountainedit.jpg", width="650em">
                 <div class="cream">
