--- a/home.htm
+++ b/home.htm
@@ -22,29 +22,26 @@
             <section class="flex black">
                 <div class="black">
                     <h1 class="head black",>About me</h1>
-                    <p class="body black">Hey there! My name is Ethan!</p>
                     <p class="body black">I'm currently studying Computer Science at the University of East Anglia.</p>
                 </div>
-                <img src="mountainedit.jpg", width="650em">
+                <img src="images/hogcranker.jpg", width="650em">
             </section>
            
             <section class="flex cream">
-                <img src="mountainedit.jpg", width="650em">
+                <img src="images/hogcranker.jpg", width="650em">
                 <div class="cream">
-                    <h1 class="head cream",>About me</h1>
-                    <p class="body cream">Hey there! My name is Ethan!</p>
-                    <p class="body cream">I'm currently studying Computer Science at the University of East Anglia.</p>
+                    <h1 class="head cream",>Placholder</h1>
+                    <p class="body cream">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam temporibus voluptatem sit consectetur adipisci nostrum recusandae beatae numquam a incidunt vero officiis reiciendis, eveniet dolor rerum aspernatur ratione ex ullam.</p>
                 </div>
                 
             </section>
 
             <section class="flex black">
                 <div class="black">
-                    <h1 class="head black",>About me</h1>
-                    <p class="body black">Hey there! My name is Ethan!</p>
-                    <p class="body black">I'm currently studying Computer Science at the University of East Anglia.</p>
+                    <h1 class="head black",>Placeholder</h1>
+                    <p class="body black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quibusdam aut modi. Molestias quod amet corrupti illo praesentium! Culpa porro itaque nihil at corrupti repellendus eaque tempora maiores magni ea!</p>
                 </div>
-                <img src="mountainedit.jpg", width="650em">
+                <img src="images/hogcranker.jpg", width="650em">
             </section>
         </main>
     </body>
