--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@
         </main>
 
         <footer>
-            <p class="smallprint cream">this site is <a href="https://colmanator.github.io/thoughts/javascript.html">javascript free</a></p>
+            <p class="smallprint cream">this site is a mess!</p>
         </footer>
 
     </body>
