--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,9 @@
     </head>
 
     <body>
-        <h1>colmanator</h1>
+        <div id="scroll-container">
+            <div id="scroll-text">colmanator  colmanator  colmanator  colmanator</div>
+        </div>
     </body>
 </html>
 
